tests/ui/borrowck/borrowck-if-with-else.stderr
error[E0381]: used binding `x` is possibly-uninitialized
  --> $DIR/borrowck-if-with-else.rs:10:9
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     if 1 > 2 {
   |        ----- if this condition is `true`, `x` is not initialized
...
LL |     foo(x);
   |         ^ `x` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
